# src/routes/laboratory.routes.ts
@@ -6,7 +6,7 @@ import Laboratory from "../controller/Lab.ctrl";
 const laboratoryRouter = Router();
 
 laboratoryRouter.get("/", UtilsService.authentication, Laboratory.allResult);
-laboratoryRouter.get("/:labId:", UtilsService.authentication, Laboratory.lab);
+laboratoryRouter.get("/:labId", UtilsService.authentication, Laboratory.lab);
 laboratoryRouter.post("/new", UtilsService.authentication, UtilsService.authorization, Laboratory.newLab);
 laboratoryRouter.put("/update/:labId", UtilsService.authentication, UtilsService.authorization, Laboratory.update);
 
