# swagger.yaml
@@ -289,9 +289,16 @@ paths:
                   message:
                     type: string
                   data:
-                    type: array
-                    items:
-                      $ref: "#/components/schemas/Laboratory"
+                    type: object
+                    properties:
+                      result:
+                        type: array
+                        items:
+                          $ref: "#/components/schemas/Laboratory"
+                      count:
+                        type: number
+                      page:
+                        type: number
         "401":
           description: Unauthenticated
           content:
@@ -350,7 +357,7 @@ paths:
       tags:
         - lab
       summary: create new Laboratory test
-      description:  name and email is required
+      description: name and email is required
       operationId: newLab
       security:
         - bearerAuth: []
@@ -360,7 +367,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/LaboratoryData"
+              $ref: "#/components/schemas/LaboratoryNewData"
       responses:
         "201":
           description: Created
@@ -371,13 +378,12 @@ paths:
                 properties:
                   message:
                     type: string
-                    example: Please check your email to confirm ur login
+                    example: Lab data created
                   data:
                     type: object
                     properties:
                       data:
-                        type: string
-                        example: Account created
+                        $ref: "#/components/schemas/LaboratoryNewData"
         "401":
           description: Unauthenticated
           content:
@@ -413,7 +419,7 @@ paths:
     put:
       tags:
         - lab
-      summary: update Laboratory test
+      summary: update Laboratory test result or  data
       description: only result is required
       operationId: updateLab
       security:
@@ -431,7 +437,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/LaboratoryData"
+              $ref: "#/components/schemas/LaboratoryUpdateData"
       responses:
         "200":
           description: Created
@@ -442,13 +448,9 @@ paths:
                 properties:
                   message:
                     type: string
-                    example: Please check your email to confirm ur login
+                    example: Lab result updated
                   data:
-                    type: object
-                    properties:
-                      data:
-                        type: string
-                        example: Account created
+                    $ref: "#/components/schemas/LaboratoryUpdateData"
         "401":
           description: Unauthenticated
           content:
@@ -519,7 +521,7 @@ components:
         conductedBy:
           type: string
 
-    LaboratoryData:
+    LaboratoryNewData:
       type: object
       properties:
         name:
@@ -527,6 +529,17 @@ components:
           example: DNA test
         email:
           type: string
+        description:
+          type: string
+        result:
+          type: string
+
+    LaboratoryUpdateData:
+      type: object
+      properties:
+        name:
+          type: string
+          example: DNA test
         description:
           type: string
         result:
